--- a/.github/workflows/bib.yml
+++ b/.github/workflows/bib.yml
@@ -29,7 +29,7 @@ jobs:
         find mglib/ -type f | parallel --will-cite './bin/megalodonw.pl 180 {} {}'
         ls sig | parallel --will-cite './bin/megalodonw.pl 10 sig/{} sig/{}'
         ls sig | parallel --will-cite './bin/megalodonw.pl 40 sig/{} -pfg -html docs/sig/{}.html sig/{} > pfg/sig/{}.pfg'
-        find mglib/ -type f | perl -pe 's/^mglib\///' | parallel --will-cite './bin/megalodonw.pl 180 mglib/{} -pfg -html docs/{}.html mglib/{} > pfg/{}.pfg'
+        find mglib/ -type f | perl -pe 's/^mglib\///' | parallel --will-cite './bin/megalodonw.pl 180 mglib/{} -pfg -html docs/{}.html mglib/{} > pfg/{}.pfg && python3 ./bin/mk_ajax_.py docs/{}.html'
         ./bin/indexer.py -r docs
         for i in `find docs/sig/ -type f && find docs/ -type f -not -path 'docs/sig/*'`; do perl -e '$h=$ARGV[0]; while(<>) {if(m/<a name=([^\/]+)/) {$l=$1} while(m/php\?b=([0-9A-Fa-f]{64})\b/g) { print "$1:\047$h\047:$l\n"}   }' $i; done > etc/rindex.txt
     - name: update the repo
