--- a/.github/workflows/bib.yml
+++ b/.github/workflows/bib.yml
@@ -18,12 +18,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-#    - name: Set up Python 3.7
-#      uses: actions/setup-python@v2
-#      with:
-#        python-version: "3.7"
-#    - run: pip3 install pyyaml pandas openpyxl 
+    - uses: actions/checkout@v4
+    - name: Set up Python 
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.x'
+    - run: python3 -m pip install lxml 
     - name: check and htmlize
       run: |
         find mglib/ -type f | parallel --will-cite './bin/megalodonw.pl 180 {} {}'
